# csv-report-calc

./: .gitignore  CMakeLists.txt  README.md  config.toml  specs.md
src/: main.cpp  median.hpp  parser.hpp  pool.hpp  reader.hpp  writer.hpp
tests/: test_median.cpp  test_parser.cpp  test_pool.cpp  test_reader.cpp
utils/: gen_data.py
